<resources>
    <string name="app_name">USSOI</string>
    <string name="no_usb_device_connected">No USB Device Connected</string>
    <string name="usb">USB</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="server_configuration">Server Configuration</string>
    <string name="url">URL</string>
    <string name="http_example_com">https://example.com</string>
    <string name="start_service">Start Service</string>
    <string name="log_management">Log Management</string>
    <string name="clear_log_video">Clear Log</string>
    <string name="export_log_video">Export Log</string>
    <string name="system_status">SYSTEM STATUS</string>
    <string name="device_setup">Device Setup</string>
    <string name="usb_icon">USB Icon</string>
    <string name="connection_method">Connection Method</string>
    <string name="notpwd">not the Pwd</string>
    <string name="admin_is">admin is</string>
    <string name="lelouch">Lelouch </string>
    <string name="room_pwd">Room PWD</string>
    <string name="room_id">Room Id</string>
    <string name="device_name">Device Name</string>
    <string name="keep_screen_on">Keep Screen ON</string>
    <string name="arigato">arigato</string>
    <string name="version">Version</string>
    <string name="screen_always_on">Screen Always On</string>
    <string name="timeout_removed">Timeout Removed</string>
    <string name="Stop_Service">Stop Service</string>
    <string name="start_Service">Start Service</string>

</resources>